amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/introspection-enum.api.federation.report
ModelId: file://amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/introspection-enum.api.graphql
Profile: GraphQL
Conforms: false
Number of results: 1

Level: Violation

- Constraint: http://a.ml/vocabularies/amf/parser#DomainElement-name-invalidIntrospectionName
  Message: Name must not begin with '__' as this is used exclusively by GraphQL’s introspection system
  Severity: Violation
  Target: file://amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/introspection-enum.api.graphql#/declares/scalar/__Season
  Property: http://www.w3.org/ns/shacl#name
  Range: [(9,5)-(9,13)]
  Location: 
